--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -9,3 +9,7 @@ libs.javaee-endorsed-api-6.0.classpath=\
 libs.javaee-endorsed-api-6.0.displayName=Biblioteca Java EE 6 Endossada para API
 libs.javaee-endorsed-api-6.0.javadoc=\
     ${base}/javaee-endorsed-api-6.0/javaee-doc-api.jar
+libs.jsf20.classpath=\
+    ${base}/jsf20/javax.faces.jar
+libs.jsf20.displayName=JSF 2.2
+libs.jsf20.prop-maven-dependencies=org.glassfish:javax.faces:2.2.7:jar
