--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -44,7 +44,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.BootsFaces-0.3.7-custom.jar}
+    ${file.reference.BootsFaces-0.3.7-custom.jar}:\
+    ${libs.jsf20.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
