--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -20,6 +20,15 @@
         </session-timeout>
     </session-config>
     
+    
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>Area Livre</web-resource-name>  
+            <url-pattern>/*</url-pattern>
+        </web-resource-collection>
+        
+    </security-constraint>
+    
     <!-- Area protegida -->
     <security-constraint>
         <web-resource-collection>
@@ -27,7 +36,7 @@
             <url-pattern>/protected/admin/*</url-pattern>
         </web-resource-collection>
         <auth-constraint>
-            <role-name>ADMIN</role-name>
+            <role-name>admin-role</role-name>
         </auth-constraint>
     </security-constraint>
     
@@ -37,14 +46,15 @@
             <url-pattern>/protected/user/*</url-pattern>
         </web-resource-collection>
         <auth-constraint>
-            <role-name>ADMIN</role-name>
-            <role-name>USER</role-name>
+            <role-name>admin-role</role-name>
+            <role-name>user-role</role-name>
         </auth-constraint>
     </security-constraint>
     
     <!-- Validação por Form-->
     <login-config>
         <auth-method>FORM</auth-method>
+        <realm-name>JDBCRealm</realm-name>
         <form-login-config>
             <form-login-page>/public/login.xhtml</form-login-page>
             <form-error-page>/public/loginError.xhtml</form-error-page>    
@@ -54,12 +64,15 @@
     <!-- Roles habilitadas -->
     
     <security-role>
-        <role-name>ADMIN</role-name>
+        <role-name>admin-role</role-name>
     </security-role>
     <security-role>
-        <role-name>USER</role-name>
-    </security-role>    
+        <role-name>user-role</role-name>
+    </security-role> 
     
+    
+    
+
     <filter>
         <filter-name>LoginFilter</filter-name>
         <filter-class>br.com.filters.LoginFilter</filter-class>
@@ -68,5 +81,6 @@
         <filter-name>LoginFilter</filter-name>
         <url-pattern>/protected/*</url-pattern>
     </filter-mapping>
+    
     
 </web-app>
